--- a/src/html/views/catalog.html
+++ b/src/html/views/catalog.html
@@ -15,10 +15,10 @@ title: "Заголовок | Проект",
     <aside class="catalog__sidebar sidebar">
       <div class="sidebar__block">
         <div class="sidebar__title">Каталог</div>
-        <ul class="sidebar__catalog-menu menu-catalog-sidebar list--clear">
-          <li class="menu-catalog-sidebar__item">
+        <ul class="sidebar__menu menu-sidebar list--clear">
+          <li class="menu-sidebar__item">
             <a href=""
-               class="menu-catalog-sidebar__link current">Спальные комплекты
+               class="menu-sidebar__link current">Спальные комплекты
               <svg width="9"
                    height="11">
                 <use xlink:href="img/spritemap.svg#sprite-sorting-down"></use>
@@ -41,45 +41,45 @@ title: "Заголовок | Проект",
               </li>
             </ul>
           </li>
-          <li class="menu-catalog-sidebar__item">
+          <li class="menu-sidebar__item">
             <a href=""
-               class="menu-catalog-sidebar__link">Гостинные</a>
+               class="menu-sidebar__link">Гостинные</a>
           </li>
-          <li class="menu-catalog-sidebar__item">
+          <li class="menu-sidebar__item">
             <a href=""
-               class="menu-catalog-sidebar__link">Прихожие</a>
+               class="menu-sidebar__link">Прихожие</a>
           </li>
-          <li class="menu-catalog-sidebar__item">
+          <li class="menu-sidebar__item">
             <a href=""
-               class="menu-catalog-sidebar__link">Столы и стулья</a>
+               class="menu-sidebar__link">Столы и стулья</a>
           </li>
-          <li class="menu-catalog-sidebar__item">
+          <li class="menu-sidebar__item">
             <a href=""
-               class="menu-catalog-sidebar__link">Кровати</a>
+               class="menu-sidebar__link">Кровати</a>
           </li>
-          <li class="menu-catalog-sidebar__item">
+          <li class="menu-sidebar__item">
             <a href=""
-               class="menu-catalog-sidebar__link">Матрасы</a>
+               class="menu-sidebar__link">Матрасы</a>
           </li>
-          <li class="menu-catalog-sidebar__item">
+          <li class="menu-sidebar__item">
             <a href=""
-               class="menu-catalog-sidebar__link">Спальные</a>
+               class="menu-sidebar__link">Спальные</a>
           </li>
-          <li class="menu-catalog-sidebar__item">
+          <li class="menu-sidebar__item">
             <a href=""
-               class="menu-catalog-sidebar__link">Комоды</a>
+               class="menu-sidebar__link">Комоды</a>
           </li>
-          <li class="menu-catalog-sidebar__item">
+          <li class="menu-sidebar__item">
             <a href=""
-               class="menu-catalog-sidebar__link">Тумбы</a>
+               class="menu-sidebar__link">Тумбы</a>
           </li>
-          <li class="menu-catalog-sidebar__item">
+          <li class="menu-sidebar__item">
             <a href=""
-               class="menu-catalog-sidebar__link">Кухни</a>
+               class="menu-sidebar__link">Кухни</a>
           </li>
-          <li class="menu-catalog-sidebar__item">
+          <li class="menu-sidebar__item">
             <a href=""
-               class="menu-catalog-sidebar__link menu-catalog-sidebar__link--sale">РАСПРОДАЖА</a>
+               class="menu-sidebar__link menu-sidebar__link--sale">РАСПРОДАЖА</a>
           </li>
         </ul>
       </div>
@@ -216,12 +216,12 @@ title: "Заголовок | Проект",
             <div class="item-product__stickers stickers">
               <div class="stickers__item item-sticker item-sticker--new">NEW</div>
             </div>
-            <a href=""
+            <a href="product.html"
                class="item-product__image">
               <img src="uploads/products/1.png "
                    alt="">
             </a>
-            <a href=""
+            <a href="product.htm"
                class="item-product__title">Кровать двуспальная Лондон</a>
             <div class="item-product__prices">
               <div class="item-product__price item-product__price--old">20 368 ₽</div>
@@ -284,12 +284,12 @@ title: "Заголовок | Проект",
             <div class="item-product__stickers stickers">
               <div class="stickers__item item-sticker item-sticker--new">NEW</div>
             </div>
-            <a href=""
+            <a href="product.htm"
                class="item-product__image">
               <img src="uploads/products/1.png "
                    alt="">
             </a>
-            <a href=""
+            <a href="product.htm"
                class="item-product__title">Кровать двуспальная Лондон</a>
             <div class="item-product__prices">
               <div class="item-product__price item-product__price--old">20 368 ₽</div>
@@ -352,12 +352,12 @@ title: "Заголовок | Проект",
             <div class="item-product__stickers stickers">
               <div class="stickers__item item-sticker item-sticker--new">NEW</div>
             </div>
-            <a href=""
+            <a href="product.htm"
                class="item-product__image">
               <img src="uploads/products/1.png "
                    alt="">
             </a>
-            <a href=""
+            <a href="product.htm"
                class="item-product__title">Кровать двуспальная Лондон</a>
             <div class="item-product__prices">
               <div class="item-product__price item-product__price--old">20 368 ₽</div>
