--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,6 +21,10 @@
 @import 'views/product';
 @import 'views/about';
 @import 'views/contacts';
+@import 'views/basket';
+@import 'views/delivery-payment';
+@import 'views/materials';
+@import 'views/works';
 
 
 
