--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -21,13 +21,13 @@
         <nav class="header__main-menu-nav">
           <ul class="main-menu list--clear">
             <li class="main-menu__item">
-              <a href=""
+              <a href="about.html"
                  class="main-menu__link">О компании</a></li>
             <li class="main-menu__item">
-              <a href=""
+              <a href="delivery-payment.html"
                  class="main-menu__link">Доставка и оплата</a></li>
             <li class="main-menu__item">
-              <a href=""
+              <a href="materials.html"
                  class="main-menu__link">Материалы</a></li>
             <li class="main-menu__item">
               <a href=""
@@ -130,43 +130,43 @@
         <nav class="header__catalog-menu-nav">
           <ul class="catalog-menu list--clear">
             <li class="catalog-menu__item">
-              <a href=""
+              <a href="catalog.html"
                  class="catalog-menu__link">Спальные комплекты</a>
             </li>
             <li class="catalog-menu__item">
-              <a href=""
+              <a href="catalog.html"
                  class="catalog-menu__link">Гостинные</a>
             </li>
             <li class="catalog-menu__item">
-              <a href=""
+              <a href="catalog.html"
                  class="catalog-menu__link">Прихожие</a>
             </li>
             <li class="catalog-menu__item">
-              <a href=""
+              <a href="catalog.html"
                  class="catalog-menu__link">Столы и стулья</a>
             </li>
             <li class="catalog-menu__item">
-              <a href=""
+              <a href="catalog.html"
                  class="catalog-menu__link">Кровати</a>
             </li>
             <li class="catalog-menu__item">
-              <a href=""
+              <a href="catalog.html"
                  class="catalog-menu__link">Матрасы</a>
             </li>
             <li class="catalog-menu__item">
-              <a href=""
+              <a href="catalog.html"
                  class="catalog-menu__link">Комоды</a>
             </li>
             <li class="catalog-menu__item">
-              <a href=""
+              <a href="catalog.html"
                  class="catalog-menu__link">Тумбы</a>
             </li>
             <li class="catalog-menu__item">
-              <a href=""
+              <a href="catalog.html"
                  class="catalog-menu__link">Кухни</a>
             </li>
             <li class="catalog-menu__item">
-              <a href=""
+              <a href="catalog.html"
                  class="catalog-menu__link catalog-menu__link--sale">Распродажа</a>
             </li>
 
