--- a/src/scss/includes/header.scss
+++ b/src/scss/includes/header.scss
@@ -332,7 +332,7 @@
 
   display          : none;
   width            : 100vw;
-  margin-left      : calc((100vw - #{$contentWidth}) / -2);
+  margin-left      : calc((100vw - #{$contentWidth}  + 30px) / -2);
   background-color : #00bc4b;
 
   &.show {
