--- a/src/html/views/delivery-payment.html
+++ b/src/html/views/delivery-payment.html
@@ -175,4 +175,5 @@ title: "Заголовок | Проект",
     </div>
   </div>
 </div>
+<%= _.template(require('./../includes/questions-form-block.html'). default)(data) %>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
