--- a/src/html/views/materials.html
+++ b/src/html/views/materials.html
@@ -112,5 +112,5 @@ title: "Заголовок | Проект",
     </div>
   </div>
 </div>
-
+<%= _.template(require('./../includes/questions-form-block.html'). default)(data) %>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
