--- a/src/html/views/works.html
+++ b/src/html/views/works.html
@@ -101,5 +101,5 @@ title: "Заголовок | Проект",
     </div>
   </div>
 </div>
-
+<%= _.template(require('./../includes/questions-form-block.html'). default)(data) %>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
