--- a/src/html/views/delivery-payment.html
+++ b/src/html/views/delivery-payment.html
@@ -56,7 +56,7 @@ title: "Заголовок | Проект",
             </div>
             <div class="item-delivery-payment__text-icon">
               Телефонный звонок. Менеджеры всегда рады предоставить необходимые сведения и принять заказ по номеру:
-              <span class="item-delivery-payment__phone">8 (999) 123-45-67</span>, прием заказов по телефону выполняется с 9.00 до 21.00.
+              <a href="tel:+79991234567" class="item-delivery-payment__phone">8 (999) 123-45-67</a>, прием заказов по телефону выполняется с 9.00 до 21.00.
             </div>
 
             <div class="item-delivery-payment__icon">
