--- a/src/scss/views/contacts.scss
+++ b/src/scss/views/contacts.scss
@@ -46,6 +46,8 @@
     display       : flex;
     align-items   : center;
     margin-bottom : 20px;
+    text-decoration : none;
+    color : inherit;
 
     > svg {
       flex-shrink  : 0;
